Dark Mode fixed

--- a/templates/getit.css
+++ b/templates/getit.css
@@ -146,38 +146,60 @@ body {
   position: relative;
   display: block;
   padding: 10px 15px;
-
   overflow: hidden;
-
   border-width: 0;
   outline: none;
   border-radius: 2px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-
   background-color: #f7d736;
-
+  transition: background-color 0.3s;
+}
+.btn2 {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  overflow: hidden;
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+  background-color: #f7d736;
   transition: background-color 0.3s;
 }
 
 .btn > * {
   position: relative;
 }
+.btn2 > * {
+  position: relative;
+}
 
 .btn:before {
   content: "";
-
   position: absolute;
   top: 50%;
   left: 50%;
-
   display: block;
   width: 0;
   padding-top: 0;
-
   border-radius: 100%;
-
   background-color: rgba(236, 240, 241, 0.3);
-
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.btn2:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  width: 0;
+  padding-top: 0;
+  border-radius: 100%;
+  background-color: rgba(236, 240, 241, 0.3);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -188,10 +210,13 @@ body {
 .btn:active:before {
   width: 120%;
   padding-top: 120%;
-
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 }
-
+.btn2:active:before {
+  width: 120%;
+  padding-top: 120%;
+  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+}
 
 .container {
   display: flex;
@@ -236,6 +261,12 @@ body {
 }
 
 .btn {
+  height: 30px;
+  width: 100%; /* Faz com que o botão preencha toda a largura do cartão */
+  padding: 0px; /* Adiciona algum espaço interno ao botão */
+  cursor: pointer; /* Muda o cursor para um ponteiro quando o usuário passa o mouse sobre o botão */
+}
+.btn2 {
   height: 30px;
   width: 100%; /* Faz com que o botão preencha toda a largura do cartão */
   padding: 0px; /* Adiciona algum espaço interno ao botão */
